<?xml version="1.0"?>
<package>
  <name>xsenstoimu</name>
  <version>0.0.0</version>
  <description>The tunnel_planar_pos package</description>

  <maintainer email="akshay@todo.todo">akshay</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cmake_modules</build_depend>
  <run_depend>cmake_modules</run_depend> 

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>xsens_slim</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>xsens_slim</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>


  <export>

  </export>
</package>
